Disambiguate call to XmlBeanWriter.addToRoot for iterators.  Also, removed generics changes until later.